# devfest-workshops

./: README.md  main.py  model.py  pymongo.py  requirements.txt  routes.py  schemas.py
client/: .eslintrc.js  .eslintrc.json  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.json
client/__tests__/: index.test.js
client/pages/: homepage.tsx  index.js  index.tsx
client/src/: middleware.ts
client/src/__test__/: index.test.tsx
client/src/components/: AddListButton.tsx  AddMovieButton.tsx  Banner.tsx  Body.tsx  CollectionHeader.tsx  Header.tsx  MainHeader.tsx  Movie.tsx  MovieList.tsx  OtherProfileWelcome.tsx  ProfileListPanel.tsx  ProfileMainTab.tsx  ProfileMoviesPanel.tsx  SingleList.tsx  SingleMovie.tsx  WelcomeContent.tsx
client/src/components/AddMovieForm/: AddCollectionForm.tsx  AddMovieForm.tsx  types.d.ts
client/src/components/Header/: Header.tsx
client/src/components/collection/: CollectionView.tsx
client/src/components/home/: Body.tsx
client/src/lib/: apiConfig.ts  types.ts  useClerkSWR.ts  utils.ts
client/src/pages/: _app.tsx  index.tsx  profile.tsx  sign-in.tsx  sign-up.tsx  view.tsx
server/: .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  main.py  pyproject.toml  pyvenv.cfg  requirements.txt
server/src/flickpicks_api/: .env.example  __init__.py  auth.py  config.py  jwks.py  main.py  model.py
server/src/flickpicks_api/models/: list.py  movie.py  user.py
server/src/flickpicks_api/routers/: lists.py  movies.py  users.py
server/src/flickpicks_api/util/: jwks.py
(+16 files in other folders)
